--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="access_token" translatable="false">pk.eyJ1IjoiYXRvcnViYXIiLCJhIjoiY2pub3AxYXM2MXk0MDNxbDd5YmptNXk3ZiJ9.mogGkAsapJ4C5YADGCBuBg</string>
     <string name="user_location_permission_not_granted">User location permission not granted</string>
     <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
+    <string name="not_able_to_obtain_device_location">Not able to obtain device location.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="map_location_image">Image of %1$s</string>
 </resources>
