--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="map_location_image">Image of %1$s</string>
+    <string name="bookTransitionName">bookTransitionName</string>
 </resources>
