--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,13 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="access_token" translatable="false">pk.eyJ1IjoiYXRvcnViYXIiLCJhIjoiY2pub3AxYXM2MXk0MDNxbDd5YmptNXk3ZiJ9.mogGkAsapJ4C5YADGCBuBg</string>
+    <string name="access_token" translatable="false">
+        pk.eyJ1IjoiYXRvcnViYXIiLCJhIjoiY2pub3AxYXM2MXk0MDNxbDd5YmptNXk3ZiJ9.mogGkAsapJ4C5YADGCBuBg
+    </string>
     <string name="user_location_permission_not_granted">User location permission not granted</string>
-    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
+    <string name="user_location_permission_explanation">This app needs location permissions in order to show its
+        functionality.
+    </string>
     <string name="not_able_to_obtain_device_location">Not able to obtain device location.</string>
     <string name="gps_disabled">GPS is disabled. Turn it on?</string>
     <string name="enable">Enable</string>
