--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="tariff_wait_time">wait time:</string>
     <string name="min">min</string>
     <string name="km">km</string>
+    <string name="booking_battery">BATTERY</string>
+    <string name="booking_remaining_distance">REMAINING\nDISTANCE</string>
+    <string name="booking_closest_charger">CLOSEST\nCHARGER</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="map_location_image">Image of %1$s</string>
